--- a/src/secret.properties
+++ b/src/secret.properties
@@ -1,5 +1,5 @@
 MYSQLJDBC.driver = com.mysql.cj.jdbc.Driver
-MYSQLJDBC.url = jdbc:mysql://localhost/PNT?serverTimezone=UTC&useSSL=false
+MYSQLJDBC.url = jdbc:mysql://localhost:3306/students
 MYSQLJDBC.userName = root
-MYSQLJDBC.password = abc123
+MYSQLJDBC.password = peekaboo2018
 
